--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -38,7 +38,7 @@ instance=Master
 interval=once
 signal=10
 #STEP=5%
-command=/home/raf/dotfiles/scripts/i3blocks_volume.sh
+command=~/.scripts/i3blocks_volume.sh
 
 [brightness]
 label=☀️
@@ -52,7 +52,7 @@ interval=5
 label=🧠
 separator=false
 interval=30
-command=/home/raf/dotfiles/scripts/i3blocks_memory.sh
+command=~/.scripts/i3blocks_memory.sh
 
 # Disk usage
 #
@@ -62,7 +62,7 @@ command=/home/raf/dotfiles/scripts/i3blocks_memory.sh
 [disk]
 label=🏠
 interval=30
-command=/home/raf/dotfiles/scripts/i3blocks_diskspace.sh
+command=~/.scripts/i3blocks_diskspace.sh
 
 # Network interface monitoring
 #
@@ -92,7 +92,7 @@ label=C:
 interval=1
 min_width=C: 100.00%
 #separator=false
-command=/home/raf/dotfiles/scripts/i3blocks_cpuusage.perl
+command=~/.scripts/i3blocks_cpuusage.perl
 
 #[load_average]
 #interval=10
