add fontconfig and xresources, add i3blocks temperature modules and some aliases

--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -23,7 +23,7 @@
 # The top properties below are applied to every block, but can be overridden.
 # Each block command defaults to the script name to avoid boilerplate.
 command=/usr/lib/i3blocks/$BLOCK_NAME
-separator_block_width=15
+separator_block_width=4
 markup=none
 
 # Volume indicator
@@ -39,11 +39,6 @@ interval=once
 signal=10
 #STEP=5%
 command=~/.scripts/i3blocks_volume.sh
-
-[brightness]
-label=☀️
-command=xbacklight -get
-interval=5
 
 # Memory usage
 #
@@ -94,8 +89,18 @@ min_width=C: 100.00%
 #separator=false
 command=~/.scripts/i3blocks_cpuusage.perl
 
-#[load_average]
-#interval=10
+[GPU_temperature]
+label=tG:
+interval=1
+min_width=tG: 100°C
+separator=false
+command=nvidia-smi -q --display=TEMPERATURE | sed '/GPU Current/!d' | cut -d: -f2 | tr -d " "  | sed 's/C/°C/'
+
+[CPU_temperature]
+label=tC:
+interval=1
+min_width=tC: 100°C
+command=sensors | grep Package | cut -d+ -f2 | cut -d+ -f2 | cut -d. -f1 | sed 's/[0-9]*/&°C/' 
 
 [battery]
 command=acpi | cut -d " " -f3-5 |  sed -e "s/,//g;s/Discharging/🔋/;s/Charging/🔌/;s/Unknown/❓/;s/Full/⚡/;s/ 0*/ /g;s/ :/ /g"
