--- a/.config/i3/config
+++ b/.config/i3/config
@@ -283,8 +283,8 @@ bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -5% #d
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle # mute sound
 
 # Sreen brightness controls
-bindsym XF86MonBrightnessUp exec sudo xbacklight -inc 5 # increase screen brightness
-bindsym XF86MonBrightnessDown exec sudo xbacklight -dec 5 # decrease screen brightness
+bindsym XF86MonBrightnessUp exec light -A 1 && pkill -SIGRTMIN+12 i3blocks
+bindsym XF86MonBrightnessDown exec light -U 1 && pkill -SIGRTMIN+12 i3blocks
 
 # Touchpad controls
 bindsym XF86TouchpadToggle exec /some/path/toggletouchpad.sh # toggle touchpad
