--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -40,6 +40,14 @@ signal=10
 #STEP=5%
 command=~/.scripts/i3blocks_volume.sh
 
+#Brightness
+[brightness]
+label=☀️
+interval=once
+signal=12
+command=light | cut -d. -f1
+
+
 # Memory usage
 #
 # The type defaults to "mem" if the instance is not specified.
