--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,9 @@
+set -g default-terminal "tmux"
+set-option -ga terminal-overrides "*,256col*:Tc"
+
 #C-a >> C-b
 unbind C-b
 set -g prefix c-a
 bind C-a send-prefix
 
-set -g default-terminal screen-256color
+
