--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -100,14 +100,15 @@ command=~/.scripts/i3blocks_cpuusage.perl
 [CPU_temperature]
 label=tC:
 interval=1
-min_width=tC: 100°C
+min_width=tC:100
 separator=false
-command=sensors | grep Package | cut -d+ -f2 | cut -d+ -f2 | cut -d. -f1 | sed 's/[0-9]*/&°C/' 
+command=sensors | grep Package | cut -d+ -f2 | cut -d+ -f2 | cut -d. -f1 | sed 's/[0-9]*/&/' 
 
 [GPU_temperature]
 label=tG:
 interval=1
-min_width=tG: 100°C
+min_width=tG:100
+separator=true
 command=~/.scripts/i3blocks_nvidia_temperature.sh
 
 [battery]
