--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,4 @@
-set -g default-terminal "tmux"
+set -g default-terminal "st-256color"
 set-option -ga terminal-overrides "*,256col*:Tc"
 
 #C-a >> C-b
