--- a/.config/i3/config
+++ b/.config/i3/config
@@ -1,5 +1,6 @@
 
 exec nm-applet
+exec --no-startup-id xmousepasteblock
 
 #start the bluetooth applet
 exec --no-startup-id blueman-applet
@@ -38,7 +39,7 @@ bindsym $mod+n gaps inner current minus 1
 bindsym $mod+Shift+b gaps inner current set 8
 bindsym $mod+Shift+n gaps inner current set 0
 
-#set the window edge to 2 pixels
+#set the window edge
 for_window [class="^.*"] border pixel 3
 
 # Font for window titles. Will also be used by the bar unless a different font
@@ -57,7 +58,7 @@ floating_modifier $mod
 	for_window [instance="dropdown"] resize set 1152 648
 	for_window [instance="dropdown"] move scratchpad
 	for_window [instance="dropdown"] border pixel 5
-	exec --no-startup-id $term -n "dropdown"  -f mono:pixelsize=14
+	exec --no-startup-id $term -n "dropdown"  -f Monospace-14
 	bindsym $mod+u [instance="dropdown"] scratchpad show; [instance="dropdown"] move position center
 #terminal running R for quick maths
 	for_window [instance="maths"] floating enable
@@ -164,48 +165,48 @@ set $ws19 "19"
 set $ws20 "20"
 
 # switch to workspace
-bindsym $mod+parenleft workspace $ws1
-bindsym $mod+parenright workspace $ws2
-bindsym $mod+braceright workspace $ws3
-bindsym $mod+plus workspace $ws4
-bindsym $mod+braceleft workspace $ws5
-bindsym $mod+bracketright workspace $ws6
-bindsym $mod+bracketleft workspace $ws7
-bindsym $mod+exclam workspace $ws8
-bindsym $mod+equal workspace $ws9
-bindsym $mod+asterisk workspace $ws10
-bindsym $mod+Control+parenleft workspace $ws11
-bindsym $mod+Control+parenright workspace $ws12
-bindsym $mod+Control+braceright workspace $ws13
-bindsym $mod+Control+plus workspace $ws14
-bindsym $mod+Control+braceleft workspace $ws15
-bindsym $mod+Control+bracketright workspace $ws16
-bindsym $mod+Control+bracketleft workspace $ws17
-bindsym $mod+Control+exclam workspace $ws18
-bindsym $mod+Control+equal workspace $ws19
-bindsym $mod+Control+asterisk workspace $ws20
+bindcode $mod+11 workspace $ws1
+bindcode $mod+12 workspace $ws2
+bindcode $mod+13 workspace $ws3
+bindcode $mod+14 workspace $ws4
+bindcode $mod+15 workspace $ws5
+bindcode $mod+16 workspace $ws6
+bindcode $mod+17 workspace $ws7
+bindcode $mod+18 workspace $ws8
+bindcode $mod+19 workspace $ws9
+bindcode $mod+20 workspace $ws10
+bindcode $mod+Control+11 workspace $ws11
+bindcode $mod+Control+12 workspace $ws12
+bindcode $mod+Control+13 workspace $ws13
+bindcode $mod+Control+14 workspace $ws14
+bindcode $mod+Control+15 workspace $ws15
+bindcode $mod+Control+16 workspace $ws16
+bindcode $mod+Control+17 workspace $ws17
+bindcode $mod+Control+18 workspace $ws18
+bindcode $mod+Control+19 workspace $ws19
+bindcode $mod+Control+20 workspace $ws20
 
 # move focused container to workspace
-bindsym $mod+Shift+parenleft move container to workspace $ws1
-bindsym $mod+Shift+parenright move container to workspace $ws2
-bindsym $mod+Shift+braceright move container to workspace $ws3
-bindsym $mod+Shift+plus move container to workspace $ws4
-bindsym $mod+Shift+braceleft move container to workspace $ws5
-bindsym $mod+Shift+bracketright move container to workspace $ws6
-bindsym $mod+Shift+bracketleft move container to workspace $ws7
-bindsym $mod+Shift+exclam move container to workspace $ws8
-bindsym $mod+Shift+equal move container to workspace $ws9
-bindsym $mod+Shift+asterisk move container to workspace $ws10
-bindsym $mod+Shift+Control+parenleft move container to workspace $ws11
-bindsym $mod+Shift+Control+parenright move container to workspace $ws12
-bindsym $mod+Shift+Control+braceright move container to workspace $ws13
-bindsym $mod+Shift+Control+plus move container to workspace $ws14
-bindsym $mod+Shift+Control+braceleft move container to workspace $ws15
-bindsym $mod+Shift+Control+bracketright move container to workspace $ws16
-bindsym $mod+Shift+Control+bracketleft move container to workspace $ws17
-bindsym $mod+Shift+Control+exclam move container to workspace $ws18
-bindsym $mod+Shift+Control+equal move container to workspace $ws19
-bindsym $mod+Shift+Control+asterisk move container to workspace $ws20
+bindcode $mod+Shift+11 move container to workspace $ws1
+bindcode $mod+Shift+12 move container to workspace $ws2
+bindcode $mod+Shift+13 move container to workspace $ws3
+bindcode $mod+Shift+14 move container to workspace $ws4
+bindcode $mod+Shift+15 move container to workspace $ws5
+bindcode $mod+Shift+16 move container to workspace $ws6
+bindcode $mod+Shift+17 move container to workspace $ws7
+bindcode $mod+Shift+18 move container to workspace $ws8
+bindcode $mod+Shift+19 move container to workspace $ws9
+bindcode $mod+Shift+20 move container to workspace $ws10
+bindcode $mod+Shift+Control+11 move container to workspace $ws11
+bindcode $mod+Shift+Control+12 move container to workspace $ws12
+bindcode $mod+Shift+Control+13 move container to workspace $ws13
+bindcode $mod+Shift+Control+14 move container to workspace $ws14
+bindcode $mod+Shift+Control+15 move container to workspace $ws15
+bindcode $mod+Shift+Control+16 move container to workspace $ws16
+bindcode $mod+Shift+Control+17 move container to workspace $ws17
+bindcode $mod+Shift+Control+18 move container to workspace $ws18
+bindcode $mod+Shift+Control+19 move container to workspace $ws19
+bindcode $mod+Shift+Control+20 move container to workspace $ws20
 
 # reload the configuration file
 bindsym $mod+Escape reload
@@ -246,7 +247,7 @@ bindsym $mod+Shift+Control+l resize grow width 10 px or 10 ppt
 bar {
 	id bar-1
 	position top
-status_command i3blocks -c ~/.config/i3/i3blocks.conf
+	status_command i3blocks -c ~/.config/i3/i3blocks.conf
 }
 
 # bar toggle, hide or show
@@ -274,7 +275,7 @@ bindsym XF86AudioNext exec playerctl next
 bindsym XF86AudioPrev exec playerctl previous
 
 #set wallpaper
-exec_always ~/.scripts/wallpaperset.py
+exec_always ~/.scripts/wallpaperset.sh /home/raf/wallpapers/
 
 #use powertop to perform an automatic tuneup to increase battery life
 exec sudo powertop --auto-tune
