--- a/.config/i3/config
+++ b/.config/i3/config
@@ -1,21 +1,4 @@
-
-exec nm-applet
-exec --no-startup-id xmousepasteblock
-
-#start the bluetooth applet
-exec --no-startup-id blueman-applet
-
-#source the .profile
-exec_always source ~/.profile
-
 #start a clipboard manager so it actually works properly
-exec xfce4-clipman
-
-#start the xfce4 notification server so notifications work
-exec /usr/lib/xfce4/notifyd/xfce4-notifyd
-
-#start compton automatically
-exec compton -b
 #shortcuts for compton
 bindsym $mod+Shift+Control+c exec killall compton
 bindsym $mod+Shift+c exec compton -b
@@ -208,12 +191,6 @@ bindcode $mod+Shift+Control+18 move container to workspace $ws18
 bindcode $mod+Shift+Control+19 move container to workspace $ws19
 bindcode $mod+Shift+Control+20 move container to workspace $ws20
 
-# reload the configuration file
-bindsym $mod+Escape reload
-
-# restart i3 inplace
-bindsym $mod+Shift+Escape restart
-
 # exit i3 (logs you out of your X session)
 bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
 
@@ -274,14 +251,5 @@ bindsym XF86AudioPause exec playerctl pause
 bindsym XF86AudioNext exec playerctl next
 bindsym XF86AudioPrev exec playerctl previous
 
-#set wallpaper
-exec_always ~/.scripts/wallpaperset.sh /home/raf/wallpapers/
-
-#use powertop to perform an automatic tuneup to increase battery life
-exec sudo powertop --auto-tune
-
-exec_always xinput set-prop `xinput | grep -i "synps/2 synaptics touchpad" | cut -d= -f2 | cut -f1` 302 1
-
-exec_always pkill -SIGUSR1 sxhkd
-
-exec_always setxkbmap -layout es -option ctrl:swapcaps -option compose:menu; sleep 2; xmodmap ~/.Xmodmap
+#set the wallpaper on i3 startup
+exec_always wallpaperset $HOME/wallpapers/
