--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -27,6 +27,8 @@
 	</alias>
 	<alias>
 		<family>monospace</family>
-		<prefer><family>dsmsfp</family></prefer>
+		<prefer>
+			<family>Droid Sans Mono Slashed for Powerline</family>
+		</prefer>
 	</alias>
 </fontconfig>
