--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -32,20 +32,18 @@ markup=none
 # The second parameter overrides the mixer selection
 # See the script for details.
 [volume]
-label=♪
 instance=Master
 #instance=PCM
 interval=once
 signal=10
 #STEP=5%
-command=~/.scripts/i3blocks_volume.sh
+command=i3bVolume
 
 #Brightness
 [brightness]
-label=☀️
 interval=once
 signal=12
-command=light | cut -d. -f1
+command=i3bBrightness
 
 
 # Memory usage
@@ -102,7 +100,7 @@ label=tC:
 interval=1
 min_width=tC:100
 separator=false
-command=sensors | grep Package | cut -d+ -f2 | cut -d+ -f2 | cut -d. -f1 | sed 's/[0-9]*/&/' 
+command=sensors | grep Package | cut -d+ -f2 | cut -d+ -f2 | cut -d. -f1 | sed 's/[0-9]*/&/'
 
 [GPU_temperature]
 label=tG:
