--- a/.config/i3/config
+++ b/.config/i3/config
@@ -14,7 +14,7 @@ set $mod Mod4
 
 #restart i3 in place
 bindsym $mod+Escape reload
-bindsym $mod+Shift Escape restart
+bindsym $mod+Shift+Escape restart
 
 
 #gaps/borders/whatever settings
@@ -28,7 +28,7 @@ bindsym $mod+Shift+b gaps inner current set 8
 bindsym $mod+Shift+n gaps inner current set 0
 
 #set the window edge
-for_window [class="^.*"] border pixel 3
+for_window [class="^.*"] border pixel 2
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
@@ -242,10 +242,6 @@ bindsym $mod+shift+x exec bash /home/raf/.scripts/locki3.sh
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5% #increase sound volume
 bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -5% #decrease sound volume
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle # mute sound
-
-# Sreen brightness controls
-bindsym XF86MonBrightnessUp exec light -A 1 && pkill -SIGRTMIN+12 i3blocks
-bindsym XF86MonBrightnessDown exec light -U 1 && pkill -SIGRTMIN+12 i3blocks
 
 # Touchpad controls
 bindsym XF86TouchpadToggle exec /some/path/toggletouchpad.sh # toggle touchpad
